--- a/frontend/src/view/admin/dashboard.html
+++ b/frontend/src/view/admin/dashboard.html
@@ -1,43 +1,43 @@
-<div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
-
-        <div class="logo">SaddleWoof</div>
-
-        <div class="navbar-header">                    
-            <button type="button" class="navbar-toggle pull-right" data-toggle="collapse" data-target=".navbar-collapse" style="padding: 20px;">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
-
-        <div class="collapse navbar-collapse navbar-collapse" role="navigation">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a ui-sref="user.profile">USER PROFILE</a></li>
-                <li><a href="" ng-click="$keycloak.logout()" ng-if="$keycloak.authenticated">LOGOUT</a></li>
-            </ul>
-
-        </div>
-    </div>
-</div>
-
-<br />
-
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            
-            <div class="row">
-                <div class="col-xs-8">
-                    <h1>Administration</h1>
-                </div>
-                <div class="col-xs-4">
-                    <img src="/image/saddledome.jpg" class="img-responsive thumbnail">
+                
+            <div class="row header">
+                <div class="col-xs-12">
+                    <h1>Administration<br /><small>Dog to Owner Association</small></h1>
                 </div>
             </div>
-  
+
+            <div class="row">
+                <div class="col-xs-6 col-md-3">
+                    <div class="page-header">
+                        <h4><i class="fa fa-paw fa-fw"></i> Dog</h4>
+                    </div>            
+                </div>
+                <div class="col-xs-6 col-md-3">
+                    <div class="page-header">
+                        <h4><i class="fa fa-user-plus fa-fw"></i> Owner</h4>
+                    </div>            
+                </div>
+                <div class="col-md-3 hidden-sm hidden-xs">
+                    <div class="page-header">
+                        <h4><i class="fa fa-paw fa-fw"></i> Dog</h4>
+                    </div>            
+                </div>
+                <div class="col-md-3 hidden-sm hidden-xs">
+                    <div class="page-header">
+                        <h4><i class="fa fa-user-plus fa-fw"></i> Owner</h4>
+                    </div>            
+                </div>
+            </div>
+
+            <div class="row">
+                <panel-dog class="col-xs-12 col-md-6" dog="dog" owners="owners" ng-repeat="dog in dogs">
+                </panel-dog>            
+            </div>
 
         </div>
+
+
     </div>
 </div>
