Fix location of hockey arena to be gps location of saddle dome

--- a/frontend/src/view/user/profile.html
+++ b/frontend/src/view/user/profile.html
@@ -73,7 +73,8 @@
                                     <p><i class="fa fa-crosshairs fa-fw"></i> <strong>Location</strong></p>
                                 </div>
                                 <div class="col-xs-5">
-                                    <p>{{dog.locationX}}, {{dog.locationY}}</p>
+                                    <p>{{dog.locationY}}</p>
+                                    <p>{{dog.locationX}}</p>                                    
                                 </div>
                             </div>
 
