Add paw to menu bar for added cuteness

--- a/frontend/src/view/user.html
+++ b/frontend/src/view/user.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
 
-        <div class="logo">SaddleWoof</div>
+        <div class="logo"><i class="fa fa-paw fa-fw"></i> SaddleWoof</div>
 
         <div class="navbar-header">                    
             <button type="button" class="navbar-toggle pull-right" data-toggle="collapse" data-target=".navbar-collapse" style="padding: 20px;">
