Usability tweak for buttons on front page

--- a/frontend/src/view/front_page.html
+++ b/frontend/src/view/front_page.html
@@ -17,7 +17,7 @@
                         <p>&nbsp;</p>
 
                         <div class="row">                
-                            <div class="col-sm-6 col-xs-12" style="text-align: center;"><a class="btn btn-primary btn-lg" href="#" ng-click="$keycloak.login()" role="button">Returning User</a></div>
+                            <div class="col-sm-6 col-xs-12 margin-bottom-10" style="text-align: center;"><a class="btn btn-primary btn-lg" href="#" ng-click="$keycloak.login()" role="button">Returning User</a></div>
                             <div class="col-sm-6 col-xs-12" style="text-align: center;"><a class="btn btn-primary btn-lg" href="{{createAccountUrl}}" role="button">Create Account</a></div>
                         </div>
 
